# code2skill

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
benchmarks/: evaluate_structural_evidence.py
benchmarks/results/: structural-evidence-benchmark.json
docs/: algorithm-notes.md  benchmarks.md  ci.md  cli.md  getting-started.md  output-layout.md  python-api.md  release.md  use-cases.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md
docs/superpowers/plans/: 2026-04-07-code2skill-architecture-product-upgrade.md
docs/superpowers/specs/: 2026-04-07-code2skill-architecture-product-upgrade-design.md  2026-04-09-code2skill-positioning-ci-native-repo-knowledge-compiler-design.md  2026-04-09-skill-final-product-artifact-model-design.md
src/code2skill/: __init__.py  adapt.py  api.py  application.py  cli.py  config.py  core.py  costing.py  git_client.py  impact.py  import_graph.py  json_utils.py  llm_backend.py  models.py  pattern_detector.py  python_imports.py  skill_context_builder.py  skill_generator.py  skill_incremental_context.py  skill_markdown.py  skill_planner.py  skill_prompts.py  state_codec.py  state_store.py
src/code2skill/analyzers/: __init__.py  project_classifier.py  rules_analyzer.py  skill_blueprint_builder.py  workflow_analyzer.py
src/code2skill/capabilities/: __init__.py  adoption_service.py  blueprint_service.py  execution_mode.py  generate_service.py  output_bundle_service.py  reporting.py  state_snapshot_service.py
src/code2skill/capabilities/adapt/: __init__.py  targets.py
src/code2skill/domain/: __init__.py  adoption.py  artifacts.py  results.py
src/code2skill/extractors/: __init__.py  base.py  config_extractor.py  python_extractor.py
src/code2skill/product/: __init__.py  cli_summary.py
src/code2skill/renderers/: __init__.py  json_renderer.py  markdown_renderer.py
src/code2skill/scanner/: __init__.py  budget.py  detector.py  filters.py  prioritizer.py  repository.py
src/code2skill/workflows/: __init__.py  requests.py
tests/: helpers.py  test_adapt.py  test_adoption_service.py  test_api.py  test_benchmark_artifacts.py  test_ci_incremental.py  test_cli.py  test_cli_summary.py  test_config_extractor.py  test_costing.py  test_execution_mode.py  test_git_client.py  test_import_graph.py  test_import_surfaces.py  test_json_utils.py  test_llm_backend.py  test_markdown_renderer.py  test_output_bundle.py  test_pattern_detector.py  test_prioritizer.py  test_python_extractor.py  test_reporting.py  test_repository_blueprint.py  test_skill_context_builder.py  test_skill_generator.py  test_skill_incremental_context.py  test_skill_markdown.py  test_skill_pipeline_prompting.py  test_skill_pipeline_service.py  test_skill_prompts.py  test_state_codec.py  test_state_snapshot_builder.py  test_state_store.py  test_workflow_requests.py
