[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code2skill"
dynamic = ["version"]
description = "Compile Python repository evidence into AI Skills and Codex/Cursor/Claude/GitHub Copilot instructions."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "OceanusXXD" },
]
dependencies = [
  "tomli>=2.0.1; python_version < '3.11'",
]
keywords = [
  "python",
  "ai",
  "llm",
  "skills",
  "codex",
  "cursor",
  "claude-code",
  "github-copilot",
  "windsurf",
  "repository-analysis",
  "ai-agents",
  "developer-tools",
  "documentation",
  "automation",
  "ci",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Documentation",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/oceanusXXD/code2skill"
Repository = "https://github.com/oceanusXXD/code2skill"
Documentation = "https://github.com/oceanusXXD/code2skill#readme"
Issues = "https://github.com/oceanusXXD/code2skill/issues"
Changelog = "https://github.com/oceanusXXD/code2skill/blob/main/CHANGELOG.md"
Contributing = "https://github.com/oceanusXXD/code2skill/blob/main/CONTRIBUTING.md"
Security = "https://github.com/oceanusXXD/code2skill/blob/main/SECURITY.md"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]
release = [
  "build>=1.5.0",
  "twine>=6.0",
]
dev = [
  "build>=1.5.0",
  "pytest>=8.0",
  "twine>=6.0",
]

[project.scripts]
code2skill = "code2skill.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "code2skill.version.__version__"}

[tool.setuptools.package-data]
code2skill = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
